; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/atm/extr_horizon.c_rx_bus_master_complete_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/atm/extr_horizon.c_rx_bus_master_complete_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@rx_busy = common dso_local global i32 0, align 4
@DBG_RX = common dso_local global i32 0, align 4
@DBG_ERR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"unexpected RX bus master completion\00", align 1
@MASTER_RX_COUNT_REG_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @rx_bus_master_complete_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rx_bus_master_complete_handler(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load i32, i32* @rx_busy, align 4
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = call i64 @test_bit(i32 %3, i32* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %10 = call i32 @rx_schedule(%struct.TYPE_5__* %9, i32 1)
  br label %19

11:                                               ; preds = %1
  %12 = load i32, i32* @DBG_RX, align 4
  %13 = load i32, i32* @DBG_ERR, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @PRINTD(i32 %14, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %17 = load i32, i32* @MASTER_RX_COUNT_REG_OFF, align 4
  %18 = call i32 @wr_regl(%struct.TYPE_5__* %16, i32 %17, i32 0)
  br label %19

19:                                               ; preds = %11, %8
  ret void
}

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @rx_schedule(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @PRINTD(i32, i8*) #1

declare dso_local i32 @wr_regl(%struct.TYPE_5__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
